Backport changes for MNT-25631 - Node duplication when sorting by "Description" with multilingual metadata